Ensure WebEngineView receives focus after pressing return from the URL bar

In Qt6, calling setFocus on a QWebEngineView after it has already loaded
two URLs doesn't actually give it focus. This seems a bug in Qt
(https://bugreports.qt.io/browse/QTBUG-122153). To work around this
problem, call setFocus from a slot connected to the part's completed signal.